[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-einvoicing-core"
version = "0.1.0"
description = "Base package for European electronic invoicing MCP servers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Christophe Mendez" }]
keywords = ["mcp", "einvoicing", "e-invoicing", "europe", "b2b", "peppol", "ubl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Office/Business :: Financial :: Accounting",
]

# [DECISION: minimal deps] Only include what is strictly needed by every country adapter.
# lxml is deliberately excluded — only countries that need XSD/XML validation (IT, DE, BE...)
# include it in their own pyproject.toml.  pydantic-settings is included because every
# country needs some form of env-var config, even if minimal.
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_einvoicing_core"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    ".env*",
    ".DS_Store",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
