[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-einvoicing-core"
version = "0.5.0"
description = "Base package for European electronic invoicing MCP servers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Christophe Mendez" }]
keywords = ["mcp", "einvoicing", "e-invoicing", "europe", "b2b", "peppol", "ubl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Office/Business :: Financial :: Accounting",
]

# [DECISION: lxml added in v0.2.0] SchematronValidator (Gap 2) and PeppolSMPClient
# (Gap 5) both require lxml for XSLT execution and SMP XML parsing.  Since these
# are now core abstractions shared by every EN 16931 country package, promoting lxml
# to a core dependency is correct.  Countries that do not use Schematron (FR) still
# have lxml installed transitively but never import it.
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "lxml>=5.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
pdf = [
    "pikepdf>=8.0.0",
]
qr = [
    "qrcode[pil]>=7.4.0",
]
xml-sign = [
    "cryptography>=42.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "qrcode[pil]>=7.4.0",
    "cryptography>=42.0.0",
]

[project.scripts]
mcp-einvoicing-download-rules = "mcp_einvoicing_core.download_rules:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_einvoicing_core"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    ".env*",
    ".DS_Store",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
